--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
+
+
 
 <head>
     <meta charset="UTF-8">
@@ -12,4 +14,4 @@
     <h1>Junior</h1>
 </body>
 
-</html>
+</html> -->
